[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/background.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/fence.png" type="Texture" id=3]
[ext_resource path="res://Main/Main.gd" type="Script" id=4]
[ext_resource path="res://Audio/jingle_bells.mp3" type="AudioStream" id=5]
[ext_resource path="res://Font/cute_notes.tres" type="DynamicFont" id=6]
[ext_resource path="res://Font/cute_notes_large.tres" type="DynamicFont" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1209.5, 28.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.5, 103.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.125, 107.5 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 509, 297 )
texture = ExtResource( 1 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 513.5, 576 )
shape = SubResource( 1 )

[node name="Fence" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fence"]
position = Vector2( 510.5, 469.75 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Fence"]
position = Vector2( 513, 401 )
scale = Vector2( 1.28, 0.523333 )
texture = ExtResource( 3 )

[node name="Fence2" type="StaticBody2D" parent="."]
position = Vector2( -522, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fence2"]
position = Vector2( 534.75, 441.5 )
shape = SubResource( 2 )

[node name="Fence3" type="StaticBody2D" parent="."]
position = Vector2( 523, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fence3"]
position = Vector2( 499, 464 )
shape = SubResource( 2 )

[node name="PlayerLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( 138, 506 )

[node name="PlayerRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 866, 510 )
action_input = "interact_p2"
aim_direction = Vector2( -1, 0 )
is_ai = true

[node name="GetReady" type="Label" parent="."]
visible = false
margin_left = 227.0
margin_top = 73.0
margin_right = 825.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 6 )
text = "GET READY..."
align = 1

[node name="LeftScore" type="Label" parent="."]
margin_left = 25.0
margin_top = 23.0
margin_right = 162.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="RightScore" type="Label" parent="."]
margin_left = 859.0
margin_top = 23.0
margin_right = 996.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2

[node name="JumpAndToss" type="Label" parent="."]
visible = false
margin_left = 128.0
margin_top = 140.0
margin_right = 966.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 6 )
text = "JUMP AND TOSS!"
align = 1

[node name="EndMessage" type="Label" parent="."]
visible = false
margin_left = 129.0
margin_top = 89.0
margin_right = 967.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 6 )
text = "LEFT WINS!"
align = 1

[node name="RestartMessage" type="Label" parent="."]
visible = false
margin_left = 129.0
margin_top = 164.0
margin_right = 967.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 6 )
text = "Press to restart"
align = 1
